[package]
name = "open-cardinal"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
protobuf = "3.7.2"
uguid = "2.2.1"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.30"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tonic = "0.14.3"
prost = "0.14.3"
tokio-stream = "0.1"
tonic-prost = "0.14.3"
mlua = { version = "0.11.6", features = ["lua55", "vendored", "serialize"] }
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "time"] }
tracing-appender = "0.2"
chrono = "0.4"
memmap2 = "0.9.9"
axum = "0.8.8"

[build-dependencies]
tonic-prost-build = "0.14.3"
